workloads/default/web-redirect.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  annotations:
    ingress.kubernetes.io/custom-response-headers: X-Service:web-redirect
    traefik.ingress.kubernetes.io/redirect-regex: ^https?://stevenxie.com/(.*)
    traefik.ingress.kubernetes.io/redirect-replacement: https://stevenxie.me/$1
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
  name: web-redirect
  namespace: default

spec:
  rules:
    - host: stevenxie.com
      http:
        paths:
          - backend:
              serviceName: varnish
              servicePort: http
